<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alto_light_gray_1"
    android:orientation="vertical">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STR_APP_VER"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/lighter_gray"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/white_bg_selector"
                android:onClick="clickHelp"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/drawer_item_3"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/white_bg_selector"
                android:onClick="clickFaceBookPage"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/STR_FB_PAGE"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/white_bg_selector"
                android:onClick="clickShareApp"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/STR_SHARE_APP"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STR_CALL_CENTER_NUM"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_call_center_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/lighter_gray"
                    android:textSize="15dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/STR_DEVELOPED_BY"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingTop="2dp"
                    android:text="@string/STR_COMPANY_NAME"
                    android:textColor="@color/lighter_gray"
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/white_bg_selector"
                android:onClick="clickDisclaimer"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/STR_DISCLAIMER"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>