<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RadioGroup
            android:id="@+id/rg_toggle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/out_line_gray"
            android:checkedButton="@+id/rb_bn"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_bn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/toggle_widget_gray"
                android:button="@null"
                android:gravity="center"
                android:text="@string/STR_BANGLA"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/toggle_widget_gray"
                android:button="@null"
                android:gravity="center"
                android:text="ENG"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RadioGroup>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ln_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/STR_MOBILE_NUMBER_DES"
            android:textColor="@color/gray"
            android:textSize="18dp"
            android:typeface="serif" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <Spinner
                android:id="@+id/country_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="5dp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_mob_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="+880"
                    android:textColor="@color/gray"
                    android:textSize="18dp"
                    android:typeface="serif"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/fieldPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:background="@color/white"
                    android:hint="@string/STR_ENTER_MOBILE_NUMBER"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/gray"
                    android:textSize="18dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@color/ColorBkgndFontBtnIndicator"></View>

            <Button
                android:id="@+id/buttonStartVerification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_button_selector"
                android:padding="3dp"
                android:text="@string/STR_REGISTRATION"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:typeface="serif" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_verify_title"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:padding="8dp"
            android:text="@string/STR_VERIFY_INSTRUCTION"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/fieldVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@color/white"
            android:hint="@string/STR_WRITE_CODE"
            android:inputType="number"
            android:maxLines="1"
            android:padding="5dp"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="25dp"
            android:background="@color/ColorBkgndFontBtnIndicator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonVerifyPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gray_button_selector"
                android:padding="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/STR_VERIFY_CODE"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:typeface="serif" />

            <Button
                android:id="@+id/buttonResend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray_button_selector"
                android:padding="3dp"
                android:text="@string/STR_RESEND_CODE"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:typeface="serif" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>